# sheraf

./: .coveralls.yml  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
doc/: changelog.rst  conf.py  databasetree.rst  fts.rst  index.rst  install.rst  integrations.rst  introduction.rst
doc/api/: attributes.rst  batches.rst  databases.rst  exceptions.rst  health.rst  queryset.rst  transactions.rst  types.rst
doc/fts/: index.rst  introduction.rst  usecases.rst
doc/source/: changelog.rst  conf.py  conftest.py  fts.rst  index.rst  install.rst  introduction.rst
doc/source/api/: attributes.rst  batches.rst  databases.rst  exceptions.rst  index.rst  indexes.rst  models.rst  queryset.rst
doc/source/tutorial/: attributes.rst  databasetree.rst  fts.rst  index.rst  indexation.rst  models.rst  parallelism.rst  zconfig.rst
doc/tutorial/: attributes.rst  databases.rst  index.rst  indexation.rst  models.rst  zconfig.rst
sheraf/: __init__.py  cli.py  conftest.py  constants.py  databases.py  exceptions.py  indexes.py  queryset.py  transactions.py  version.py
sheraf/attributes/: __init__.py  base.py  blobs.py  collections.py  counter.py  enum.py  files.py  index.py  indexdetails.py  inlines.py  models.py  password.py  simples.py
sheraf/batches/: __init__.py  checks.py  migrations.py  utils.py
sheraf/health/: __init__.py  checks.py  fixes.py  utils.py
sheraf/models/: __init__.py  attributes.py  base.py  indexation.py  indexmanager.py  inline.py
sheraf/queryset/: __init__.py
sheraf/tools/: dicttools.py  more_itertools.py
sheraf/types/: __init__.py  counter.py  largedict.py  largelist.py
tests/: __init__.py  conftest.py  shell.py  test_cli.py  utils.py  zeo.config  zeo_filestorage_test.config  zodb_multiple_databases.conf  zodb_unique_database.conf
tests/attributes/: test_base.py  test_blobs.py  test_booleans.py  test_callbacks.py  test_counter.py  test_datetime.py  test_dict.py  test_enum.py  test_files.py  test_indexed_models.py  test_inline.py  test_inline_model_dict.py  test_inline_model_list.py  test_inline_model_set.py  test_integer.py  test_list.py  test_model.py  test_model_dict.py  test_model_list.py  test_model_reverse.py  test_model_reverse_list.py  test_model_reverse_set.py  test_model_set.py  test_password.py  test_sets.py  test_simples.py  test_string.py  test_uuid.py
tests/batches/: test_check_index.py  test_checks.py  test_utils.py
tests/batches/fixture1/: __init__.py
tests/checks/: test_tables.py
tests/databases/: conftest.py  test_connection.py  test_database.py  test_multiple_databases.py  test_storage_object_argument.py  test_uri.py
tests/filtering/: perf_filter.py  test_consistency.py  test_create.py  test_edit.py
tests/health/: test_check_index.py  test_checks.py  test_utils.py
tests/health/fixture1/: __init__.py
tests/health/fixture1/subdirectory/: model2.py
tests/indexes/: test_indexes.py
tests/models/: test_attribute_decorators.py  test_automodel.py  test_basemodel.py  test_conflicts.py  test_general_cases.py  test_indexation.py  test_indexed_model.py  test_inline_model.py  test_intmodel.py  test_several_databases.py  test_transactions.py
tests/models/indexation/: test_common_index.py  test_custom_methods.py  test_disabled_index.py  test_empty_index_keys.py  test_exceptions.py  test_inheritance.py  test_initialization.py  test_multiple_index.py  test_performances.py  test_types.py  test_unique_index.py  test_utils.py
tests/perf/: multiprocessing_write.py  perfs_large_dict_size_and_object_type.py  test_disk_usage.py  test_large_dict_iteration.py  test_perf.py  test_perf_huge_write.py  test_threading.py  test_types.py
tests/queryset/: conftest.py  test_bitwise.py  test_ordering.py  test_queryset.py  test_slicing.py
tests/testing/: test_utils.py
tests/tools/: test_dict_merge.py  test_dict_tools.py  test_persistent_reference_dict_merge.py  test_state_dict_merge.py
tests/transaction/: test_transactions.py
tests/types/: test_counter.py  test_large_dict.py  test_large_list.py  test_small_dict.py
